--- a/pom.xml
+++ b/pom.xml
@@ -51,7 +51,7 @@
     <finalName>webapps</finalName>
    
       <plugins>
-	  
+	 	  
 	    <plugin>
 		 <groupId>org.apache.tomcat.maven</groupId>
 		 <artifactId>tomcat7-maven-plugin</artifactId>
@@ -112,6 +112,11 @@
 			</execution>
 		 </executions>
 	    </plugin>	
+	    <plugin>
+  		<groupId>org.sonarsource.scanner.maven</groupId>
+ 		 <artifactId>sonar-maven-plugin</artifactId>
+  		<version>3.2</version>
+	</plugin>
      </plugins>
   </build>
 </project>
