--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
 	<sonar.host.url>http://192.168.43.111:9000/</sonar.host.url>
 	<sonar.login>admin</sonar.login>
 	<sonar.password>admin</sonar.password>
+        <sonar.scm.provider>git</sonar.scm.provider>
   </properties>
 
   <dependencies>
