--- a/pom.xml
+++ b/pom.xml
@@ -17,7 +17,7 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <maven.compiler.source>1.7</maven.compiler.source>
     <maven.compiler.target>1.7</maven.compiler.target>
-	<sonar.host.url>https://192.168.43.112:9000/</sonar.host.url>
+	<sonar.host.url>http://192.168.43.112:9000/</sonar.host.url>
 	<sonar.login>admin</sonar.login>
 	<sonar.password>admin</sonar.password>
         <sonar.scm.provider>git</sonar.scm.provider>
