--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,8 @@
 		<id>nexus</id>
 		<name>snapshotRepo</name>
 		<url>http://3.23.89.216:8081/nexus/content/repositories/snapshotRepo/</url>
+		<username>admin</username>
+		<password>admin123</password>
 	</snapshotRepository>
 	
   </distributionManagement>
